--- a/styles/1.css
+++ b/styles/1.css
@@ -35,6 +35,7 @@ body {
   justify-content: center;
   gap: 60px;
   margin-bottom: -50px;
+  width: flex 1;
 }
 .me {
   width: 500px;
@@ -47,9 +48,9 @@ body {
 .name {
   font-size: 200px;
   text-decoration: underline;
-  display: flex;
   color: rgb(220, 80, 20);
-  display: block;
+  display: flex;
+  width: flex 1;
   margin: 0;
 }
 
